<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="test_account_name">changed</string>
    <string name="test_account_amount">$2</string>
    <string name="test_contact_name">Test Name</string>
    <string name="test_contact_email">test@email.com</string>
    <string name="test_contact_phone">9999999999</string>
</resources>