<?xml version="1.0" encoding="utf-8"?>
<!--Layout for DatePickerFragment to use as a Dialog-->
<DatePicker
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_date_picker"
    android:calendarViewShown="false">

</DatePicker>